fix: remove white space below the website

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,7 @@ body,
 html {
   font-family: "Halyard Display";
 }
+
+.App {
+  overflow: hidden;
+}
